frostwire (5.1.4) stable; urgency=high

  * Bug fix when downloading a secondary file from the second torrent
    download would not start and would appear as seeding.
  * Cleans all empty folders created by a partial download once the download
    is removed from the transfer manager.
  * Fixes issue with transfer manager resetting the order of columns.

 -- FrostWire Team <contact@frostwire.com>  Wed, 24 Aug 2011 00:57:38 -0500

frostwire (5.1.3) stable; urgency=high

  * Search results now arrive under 200ms, aka, Instant Search.
  * New FrostWire "Smart Torrent" search. FrostWire will search inside
    top matching torrents for individual files matching the current query.
  * Core upgrade, if a .torrent fails to download from its HTTP location
    FrostWire will download it from the DHT if it can find it there.
  * Functionality to see the size of the Search DB and to reset it.
  * UX upgrade, ability to hide/show seeding torrents on transfer manager.
  * UX upgrade, Phone & Tablets desktop explorer asks before deleting files.
  * UX upgrade, New file "Extension" column on search results.
  * UX upgrade, Search tabs now have animated indicator to let user know
    a search is still going on.
  * UX upgrade, New filter by file type. Filter controls re-arranged.
  * UX fix, search results can now be sorted by file type.
  * TPB has been added to the list of search engines.
  * Mininova is back.

 -- FrostWire Team <contact@frostwire.com>  Thu, 18 Aug 2011 18:50:00 -0500

frostwire (5.0.8) stable; urgency=high

  * Shows torrent details after a download starts to bring traffic back
    to the search engine that provided the result as a default setting.
  * Shows FrostWire icon for search results to which we can't resolve the
    file extension.
  * Removes Mininova from search engines.

 -- FrostWire Team <contact@frostwire.com>  Sat, 16 Jul 2011 19:41:08 -0500

frostwire (5.0.7) stable; urgency=high
